# sevenx-1-todo

./: README.md  notes.md
database/: db_init.sql  db_user.sql
database/migrations/: 0000001.sql  0000002.sql
server/: Cargo.toml  README.md
server/src/: main.rs
web/: README.md  package-lock.json  package.json
web/src/: App.js
web/src/components/AddTask/: AddTask.js
web/src/components/Login/: Login.js
web/src/components/RegisterUser/: RegisterUser.js
web/src/components/Tasks/: Tasks.js
web/src/components/User/: User.js
web/src/store/: sessionSlice.js  store.js  tasksSlice.js
