[package]
name = "server"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
tokio = { version = "1.0", features = ["full"]}
axum = { path = "../../axum/axum" }
tower-http = { version = "0.2.0", features = ["cors"] }
serde = { version = "1.0.136", features = ["derive"] }
serde_json = "1.0.68"