[package]
name = "server"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
tokio = { version = "1.0", features = ["full"]}
axum = { path = "../../axum/axum" }
tower-http = { version = "0.2.0", features = ["cors", "trace"] }
serde = { version = "1.0.136", features = ["derive"] }
serde_json = "1.0.68"
serde_qs = "0.9.1"
serde_urlencoded = "0.7.1"
tokio-postgres = { version = "0.7.5", features = ["with-uuid-0_8"] }
uuid = { version = "0.8.2", features = ["serde"] }
bb8 = "0.7.1"
bb8-postgres = "0.7.0"
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter"]}